--- a/src/app/componentes/rkmain/rkd/rkd.component.html
+++ b/src/app/componentes/rkmain/rkd/rkd.component.html
@@ -42,7 +42,7 @@
         </mat-dialog-actions>
 
     </div>
-    <!--<div *ngSwitchCase="'RECHAZADO'">
+    <div *ngSwitchCase="'RECHAZADO'">
 
         <mat-dialog-actions align="end" cdkDragHandle>
 
@@ -52,9 +52,9 @@
 
 
 
-    <!-- </mat-dialog-actions> -->
+        </mat-dialog-actions>
 
-    <!-- </div> -->
+    </div>
 
     <div *ngSwitchCase="'ENVIADO A APROBACION'">
         <mat-dialog-actions align="end">
@@ -158,12 +158,19 @@
                         </div>
                         <div class="col-md-2">
                             <mat-form-field>
-                                <input matInput type="text" name="dimensionRiesgoPuroDesc" placeholder="Riesgo Puro" [(ngModel)]="dimensionModel.dimensionRiesgoPuroDesc" #dimensionRiesgoPuroDesc="ngModel" readonly="true" />
+                                <input matInput *ngIf="dimensionModel.dimensionRiesgoPuroDesc !==' '" type="text" [class]="dimensionModel.dimensionRiesgoPuroDesc" name="dimensionRiesgoPuroDesc" placeholder="Riesgo Puro" [(ngModel)]="dimensionModel.dimensionRiesgoPuroDesc" #dimensionRiesgoPuroDesc="ngModel"
+                                    readonly="true" />
+                                <input matInput *ngIf="dimensionModel.dimensionRiesgoPuroDesc ===' '" type="text" [id]="dimensionModel.dimensionRiesgoPuroDesc" name="dimensionRiesgoPuroDesc" placeholder="Riesgo Puro" [(ngModel)]="dimensionModel.dimensionRiesgoPuroDesc" #dimensionRiesgoPuroDesc="ngModel"
+                                    readonly="true" />
                             </mat-form-field>
                         </div>
                         <div class="col-md-2">
                             <mat-form-field>
-                                <input matInput type="text" name="dimensionRiesgoResidualDesc" placeholder="Riesgo Residual" [(ngModel)]="dimensionModel.dimensionRiesgoResidualDesc" #dimensionRiesgoResidualDesc="ngModel" readonly="true" />
+                                <input matInput *ngIf="dimensionModel.dimensionRiesgoResidualDesc !==' '" type="text" [class]="dimensionModel.dimensionRiesgoResidualDesc" name="dimensionRiesgoResidualDesc" placeholder="Riesgo Residual" [(ngModel)]="dimensionModel.dimensionRiesgoResidualDesc"
+                                    #dimensionRiesgoResidualDesc="ngModel" readonly="true" />
+                                <input matInput *ngIf="dimensionModel.dimensionRiesgoResidualDesc ===' '" type="text" [id]="dimensionModel.dimensionRiesgoResidualDesc" name="dimensionRiesgoResidualDesc" placeholder="Riesgo Residual" [(ngModel)]="dimensionModel.dimensionRiesgoResidualDesc"
+                                    #dimensionRiesgoResidualDesc="ngModel" readonly="true" />
+
                             </mat-form-field>
                         </div>
                     </div>
@@ -201,7 +208,7 @@
                 <tbody>
                     <tr *ngFor="let item of riesgosList">
                         <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="001"  && item.pendingDelete === "Y"|| item.estado ==="002" && item.pendingDelete === "Y" || item.estado ==="003" && item.pendingDelete === "Y" || item.estado ==="006" && item.pendingDelete === "Y"'
-                            class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (**)</a></td>
+                            class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (*)</a></td>
                         <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="004" && item.pendingDelete === "Y"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (**)</a></td>
                         <td title="Pendiente Inactivacion (Eliminacion)." *ngIf=' item.estado ==="007" && item.pendingDelete === "Y"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (***)</a></td>
 
@@ -211,17 +218,17 @@
                         <td *ngIf=' item.estado ==="007" && item.pendingDelete ==="N"' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (***)</a></td>
                         <td *ngIf=' item.estado ==="000" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (R)</a></td>
                         <td *ngIf=' item.estado ==="000" && item.pendingDelete ==="N" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (R)</a></td>
-                        <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td>
-                        <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="N" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td>
+                        <!-- <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="Y" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td> -->
+                        <!-- <td *ngIf=' item.estado ==="010" && item.pendingDelete ==="N" ' class="mdl-data-table__cell--non-numeric">{{item.Id}}<a style="font-size: 11px;color: red;"> (Ar)</a></td> -->
                         <td *ngIf='item.estado ==="008" && item.pendingDelete ==="N"' class="mdl-data-table__cell--non-numeric">{{item.Id}}</td>
 
                         <td class="mdl-data-table__cell--non-numeric">{{item.Descripcion}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoPuroS}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoResidualS}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoPuroM}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoResidualM}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoPuroN}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoResidualN}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoPuroS">{{item.riesgoRiesgoPuroS}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoResidualS">{{item.riesgoRiesgoResidualS}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoPuroM">{{item.riesgoRiesgoPuroM}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoResidualM">{{item.riesgoRiesgoResidualM}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoPuroN">{{item.riesgoRiesgoPuroN}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoResidualN">{{item.riesgoRiesgoResidualN}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -258,12 +265,12 @@
                         <td class="mdl-data-table__cell--non-numeric">{{item.Id}}</td>
 
                         <td class="mdl-data-table__cell--non-numeric">{{item.Descripcion}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoPuroS}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoResidualS}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoPuroM}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoResidualM}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoPuroN}}</td>
-                        <td class="mdl-data-table__cell--non-numeric">{{item.riesgoRiesgoResidualN}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoPuroS">{{item.riesgoRiesgoPuroS}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoResidualS">{{item.riesgoRiesgoResidualS}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoPuroM">{{item.riesgoRiesgoPuroM}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoResidualM">{{item.riesgoRiesgoResidualM}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoPuroN">{{item.riesgoRiesgoPuroN}}</td>
+                        <td class="mdl-data-table__cell--non-numeric" [id]="item.riesgoRiesgoResidualN">{{item.riesgoRiesgoResidualN}}</td>
                     </tr>
                 </tbody>
             </table>
