--- a/src/app/componentes/rkmain/rkc/rkc.component.scss
+++ b/src/app/componentes/rkmain/rkc/rkc.component.scss
@@ -1,6 +1,44 @@
-@font-face {
-    font-family: 'collahuasi';
-    src: url("assets/eurostyle.ttf")
+.INSIGNIFICANTE {
+    background-color: #00B600;
+    color: white;
+    font-weight: bold;
+    border: 0px;
+}
+
+.INTOLERABLE {
+    background-color: #FF0000;
+    color: black;
+    font-weight: bold;
+    border: 0px;
+}
+
+.TOLERABLE {
+    background-color: #FFFF01;
+    color: black;
+    font-weight: bold;
+    border: 0px;
+}
+
+#INSIGNIFICANTE {
+    background-color: #00B600;
+    color: white;
+    font-weight: bold;
+}
+
+#INTOLERABLE {
+    background-color: #FF0000;
+    color: black;
+    font-weight: bold;
+}
+
+#TOLERABLE {
+    background-color: #FFFF01;
+    color: black;
+    font-weight: bold;
+}
+
+#SinPermisos {
+    cursor: not-allowed;
 }
 
 .form-control {
