--- a/src/app/componentes/rkmain/rkd/rkd.component.scss
+++ b/src/app/componentes/rkmain/rkd/rkd.component.scss
@@ -1,5 +1,42 @@
+.INSIGNIFICANTE {
+    background-color: #00B600;
+    color: white;
+    font-weight: bold;
+    border: 0px;
+}
 
-  
+.INTOLERABLE {
+    background-color: #FF0000;
+    color: black;
+    font-weight: bold;
+    border: 0px;
+}
+
+.TOLERABLE {
+    background-color: #FFFF01;
+    color: black;
+    font-weight: bold;
+    border: 0px;
+}
+
+#INSIGNIFICANTE {
+    background-color: #00B600;
+    color: white;
+    font-weight: bold;
+}
+
+#INTOLERABLE {
+    background-color: #FF0000;
+    color: black;
+    font-weight: bold;
+}
+
+#TOLERABLE {
+    background-color: #FFFF01;
+    color: black;
+    font-weight: bold;
+}
+
 .form-control {
     display: block;
     width: 100%;
@@ -13,7 +50,7 @@
     border: 1px solid #ced4da;
     border-radius: 0.2rem;
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 .mdl-data-table th {
@@ -28,7 +65,7 @@
     color: black;
     padding-bottom: 4px;
     box-sizing: border-box;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 .mdl-data-table tbody tr {
@@ -40,7 +77,7 @@
     transition-duration: 0.14s;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: background-color;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 .box-body {
@@ -56,52 +93,60 @@
 }
 
 .mdl-data-table__cell--non-numeric {
-    text-align:left !important;
+    text-align: left !important;
     height: 9px !important;
     padding: 0px 0px 0px 12px;
     max-width: 300px;
-    white-space: pre-wrap; /* css-3 */
-    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-    white-space: -pre-wrap; /* Opera 4-6 */
-    white-space: -o-pre-wrap; /* Opera 7 */
-    word-wrap: break-word; /* Internet Explorer 5.5+ */
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    white-space: pre-wrap;
+    /* css-3 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 11px;
 }
+
 thead th {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
     background: white;
     z-index: 10;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
 table th {
-  position: sticky;
-  background: white;
-  top: -1px;
- font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
-thead tr:first-child th { 
-    position: sticky; 
+    position: sticky;
     background: white;
-    top: -1px; 
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    top: -1px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
-#estatico{
-    position: sticky; 
+
+thead tr:first-child th {
+    position: sticky;
     background: white;
-    top: 25px; 
+    top: -1px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
 }
-.article-title{
+
+#estatico {
+    position: sticky;
+    background: white;
+    top: 25px;
+}
+
+.article-title {
     font-size: 14px;
     color: white;
     font-weight: bold;
     position: sticky;
     top: 60px;
-    background-color:#175641;
-    display:inline-block;
+    background-color: #175641;
+    display: inline-block;
     width: 100%;
-
-}    
+}
