--- a/src/app/componentes/rkmain/rkpend/rkpend.component.scss
+++ b/src/app/componentes/rkmain/rkpend/rkpend.component.scss
@@ -15,6 +15,9 @@
 
 #SinPermisos {
     cursor: not-allowed;
+    input:checked {
+        background-color: #2196F3;
+    }
 }
 
 .mdl-data-table tbody tr {
